WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177558
Incorrect video fullscreen animation when element has a transform.
https://bugs.webkit.org/show_bug.cgi?id=177558
Summary
Incorrect video fullscreen animation when element has a transform.
Jeremy Jones
Reported
2017-09-27 11:55:04 PDT
Incorrect fullscreen animation when element has a transform.
Attachments
Patch
(2.01 KB, patch)
2017-09-27 11:59 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Patch
(2.05 KB, patch)
2017-10-03 11:08 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2017-09-27 11:59:59 PDT
Created
attachment 321988
[details]
Patch
Jeremy Jones
Comment 2
2017-09-27 12:00:38 PDT
rdar://problem/29603741
Jeremy Jones
Comment 3
2017-10-03 11:08:51 PDT
Created
attachment 322550
[details]
Patch
WebKit Commit Bot
Comment 4
2017-10-09 10:54:34 PDT
Comment on
attachment 322550
[details]
Patch Clearing flags on attachment: 322550 Committed
r223051
: <
http://trac.webkit.org/changeset/223051
>
WebKit Commit Bot
Comment 5
2017-10-09 10:54:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug