Incorrect fullscreen animation when element has a transform. https://bugs.webkit.org/show_bug.cgi?id=177558 rdar://problem/29603741

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-10-09
Reviewed by Jer Noble.

Use a bit of code from element fullscreen to do this correctly for video fullscreen.
The key is to get the absolute quad from the renderer. This will work for scaling,
But since we still take the bounding box, it won't work for rotations.

* WebProcess/cocoa/VideoFullscreenManager.mm:
(WebKit::inlineVideoFrame):

Canonical link: https://commits.webkit.org/194322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223051 268f45cc-cd09-0410-ab3c-d52691b4dbfc